Fine tuning Fix navigation issues on connect